--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,12 @@ html {
 	border-radius: 2px;
 }
 
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+    background-color: var(--bdazzled-blue);
+	border-color: var(--bdazzled-blue);
+	box-shadow: 0 0 0 0.2rem rgb(52 86 139 / 50%)
+}
+
 
 /* BARRE DE MENU */
 
