--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -318,17 +318,7 @@ ul.social-footer2 li a {
 .btn-footer:hover,
 .btn-footer:focus,
 .btn-footer.active {
-	background: var(--bdazzled-blue);
-	color: #fff;
-	-webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	-ms-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	-o-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-	-webkit-transition: all 250ms ease-in-out 0s;
-	-moz-transition: all 250ms ease-in-out 0s;
-	-ms-transition: all 250ms ease-in-out 0s;
-	-o-transition: all 250ms ease-in-out 0s;
-	transition: all 250ms ease-in-out 0s;
-
+	background-color: #FFF;
+	border-color: var(--burnt-sienna);
+	color: var(--burnt-sienna);
 }
