--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@ body,
 html {
 	margin: 0;
 	padding: 0;
-	background-color: #FFF;
+	background-color: var(--honeydew);
 	font-family: 'Heebo', Tahoma, Verdana, sans-serif;
 }
 
@@ -109,6 +109,12 @@ li {
 	border-radius: 2px;
 	width: 100%;
     height: 350px;
+	background-color: #FFF;
+}
+
+.div {
+	background-color: #FFF;
+
 }
 
 
