--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,13 @@ html {
 	padding: 0;
 	background-color: var(--honeydew);
 	font-family: 'Heebo', Tahoma, Verdana, sans-serif;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.container-main {
+    flex: 1;
 }
 
 li {
