--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,12 @@ li {
 	list-style-type: none;
 }
 
+.form-control {
+	border-color: var(--bdazzled-blue);
+	border-radius: 2px;
+}
+
+
 /* Scrollbar */
 
 ::-webkit-scrollbar-track {
@@ -104,16 +110,12 @@ li {
 	background-color: #FFF;
 }
 
-.form-control {
-	border-color: var(--bdazzled-blue);
-	border-radius: 2px;
-}
-
 
 /* CARD */
 
 .card {
 	border-radius: 2px;
+	border: none;
 	width: 100%;
     height: 350px;
 	background-color: #FFF;
@@ -121,7 +123,6 @@ li {
 
 .div {
 	background-color: #FFF;
-
 }
 
 
