--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -335,3 +335,11 @@ ul.social-footer2 li a {
 	border-color: var(--burnt-sienna);
 	color: var(--burnt-sienna);
 }
+
+/*==================== 
+    Article view 
+====================== */
+
+#contact{
+	height: 200px;
+}
