--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,22 @@ html {
     flex: 1;
 }
 
+.ovale {
+	width: 100%;
+	height: 500px;
+	position: absolute;
+	top: -200px;
+	z-index: 0;
+	border-radius: 100% / 500px;
+    background: var(--burnt-sienna);
+}
+
+.title {
+	position: relative;
+	z-index: 10;
+	color: #FFF;
+}
+
 li {
 	list-style-type: none;
 }
