--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,7 @@ html {
 	top: -200px;
 	z-index: 0;
 	border-radius: 100% / 500px;
-    background: var(--burnt-sienna);
+    background: var(--bdazzled-blue);
 }
 
 .title {
